# goob

./: Cargo.toml  flash.sh
.cargo/: config.toml
src/: main.rs
