[package]
name = "goob"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "goob"
test = false
doctest = false
bench = false

[dependencies]
embedded-hal = "1.0"
arduino-hal = { git = "https://github.com/rahix/avr-hal", rev = "5ccdd12d724d5b65273eb33a27cb55ab2ddcc865", features = [
	"arduino-uno",
] }
avr-device = "0.7"

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true
strip = true
